internal/kgateway/setup/testdata/standard/jwtclaim-rbac-trafficpolicy-out.yaml
clusters:
  - connectTimeout: 5s
    edsClusterConfig:
      edsConfig:
        ads: {}
        resourceApiVersion: V3
    ignoreHealthOnHostRemoval: true
    metadata: {}
    name: kube_default_kubernetes_443
    type: EDS
  - connectTimeout: 5s
    edsClusterConfig:
      edsConfig:
        ads: {}
        resourceApiVersion: V3
    ignoreHealthOnHostRemoval: true
    metadata: {}
    name: kube_gwtest_extproc_9091
    type: EDS
    typedExtensionProtocolOptions:
      envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
        '@type': type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
        explicitHttpConfig:
          http2ProtocolOptions: {}
  - connectTimeout: 5s
    edsClusterConfig:
      edsConfig:
        ads: {}
        resourceApiVersion: V3
    ignoreHealthOnHostRemoval: true
    metadata: {}
    name: kube_gwtest_reviews_8080
    type: EDS
endpoints:
  - clusterName: kube_gwtest_reviews_8080
    endpoints:
      - lbEndpoints:
          - endpoint:
              address:
                socketAddress:
                  address: 10.244.1.11
                  portValue: 8080
            loadBalancingWeight: 1
        loadBalancingWeight: 1
        locality:
          region: r1
          subZone: r1z2s3
          zone: r1z2
      - lbEndpoints:
          - endpoint:
              address:
                socketAddress:
                  address: 10.244.2.14
                  portValue: 8080
            loadBalancingWeight: 1
        loadBalancingWeight: 1
listeners:
  - address:
      socketAddress:
        address: '::'
        ipv4Compat: true
        portValue: 8080
    filterChains:
      - filters:
          - name: envoy.filters.network.http_connection_manager
            typedConfig:
              '@type': type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
              httpFilters:
                - name: envoy.filters.http.rbac
                  typedConfig:
                    '@type': type.googleapis.com/envoy.extensions.filters.http.rbac.v3.RBAC
                - name: envoy.filters.http.router
                  typedConfig:
                    '@type': type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
              mergeSlashes: true
              normalizePath: true
              rds:
                configSource:
                  ads: {}
                  resourceApiVersion: V3
                routeConfigName: listener~8080
              statPrefix: http
              useRemoteAddress: true
        name: listener~8080
    name: listener~8080
routes:
  - ignorePortInHostMatching: true
    name: listener~8080
    virtualHosts:
      - domains:
          - example.com
        name: listener~8080~example_com
        routes:
          - match:
              prefix: /
            name: listener~8080~example_com-route-0-httproute-route-gwtest-0-0-matcher-0
            route:
              cluster: kube_gwtest_reviews_8080
              clusterNotFoundResponseCode: INTERNAL_SERVER_ERROR
            typedPerFilterConfig:
              envoy.filters.http.rbac:
                '@type': type.googleapis.com/envoy.extensions.filters.http.rbac.v3.RBACPerRoute
                rbac:
                  rules:
                    policies:
                      ns[gwtest]-policy[route-test]-rule[0]:
                        permissions:
                          - any: true
                        principals:
                          - sourcedMetadata:
                              metadataMatcher:
                                filter: envoy.filters.http.jwt_authn
                                path:
                                  - key: payload
                                  - key: test
                                value:
                                  stringMatch:
                                    exact: foo
                      ns[gwtest]-policy[route-test]-rule[1]:
                        permissions:
                          - any: true
                        principals:
                          - sourcedMetadata:
                              metadataMatcher:
                                filter: envoy.filters.http.jwt_authn
                                path:
                                  - key: payload
                                  - key: request
                                  - key: auth
                                  - key: claims
                                  - key: groups
                                value:
                                  listMatch:
                                    oneOf:
                                      stringMatch:
                                        exact: group1
